--- a/shairport_sync/config.json
+++ b/shairport_sync/config.json
@@ -1,8 +1,8 @@
 {
-  "name": "Shairport Sync",
+  "name": "Shairport Sync_forked",
   "version": "0.0.1",
-  "slug": "shairport_sync",
-  "description": "Shairport Sync for Hass.io",
+  "slug": "shairport_sync_forked",
+  "description": "Shairport Sync for Hass.io forked",
   "url": "https://github.com/lucazertyui/addon-shairport-sync",
   "startup": "application",
   "arch": [
